# voulezvous-tv

./: .gitignore  BLUEPRINT.md  Cargo.toml  README.md  Voulezvous Platform — Engineering Doc (Modular, DRY, Multi-Mode) (1).md  voulezvous-tv.md  vvtv-implementation-plan.md
apps/vvtv-admin/: Cargo.toml
apps/vvtv-admin/src/: main.rs
apps/vvtv-control-api/: Cargo.toml
apps/vvtv-control-api/src/: main.rs
apps/vvtv-orchestrator/: Cargo.toml
apps/vvtv-orchestrator/src/: main.rs
apps/vvtv-orchestrator/tests/: pipeline.rs
cloudflare/worker/: package.json  wrangler.toml
cloudflare/worker/migrations/: 0001_init.sql
cloudflare/worker/src/: index.ts
config/: owner_card.sample.yaml
crates/vvtv-audit/: Cargo.toml
crates/vvtv-audit/src/: lib.rs
crates/vvtv-config/: Cargo.toml
crates/vvtv-config/src/: lib.rs
crates/vvtv-control-agent/: Cargo.toml
crates/vvtv-control-agent/src/: lib.rs
crates/vvtv-curator/: Cargo.toml
crates/vvtv-curator/src/: lib.rs
crates/vvtv-discovery/: Cargo.toml
crates/vvtv-discovery/src/: lib.rs
crates/vvtv-fetcher/: Cargo.toml
crates/vvtv-fetcher/src/: lib.rs
crates/vvtv-nightly/: Cargo.toml
crates/vvtv-nightly/src/: lib.rs
crates/vvtv-planner/: Cargo.toml
crates/vvtv-planner/src/: lib.rs
crates/vvtv-prep/: Cargo.toml
crates/vvtv-prep/src/: lib.rs
crates/vvtv-queue/: Cargo.toml
crates/vvtv-queue/src/: lib.rs
crates/vvtv-store/: Cargo.toml
crates/vvtv-store/runtime/exports/: test-audit-export.json
crates/vvtv-store/runtime/state/: test-vvtv-alert-state.db  test-vvtv-cursors.db  test-vvtv-lock.db  test-vvtv-retention.db  test-vvtv.db
crates/vvtv-store/src/: lib.rs
crates/vvtv-stream/: Cargo.toml
crates/vvtv-stream/src/: lib.rs
crates/vvtv-types/: Cargo.toml
crates/vvtv-types/src/: lib.rs
docs/: cloudflare-integration.md  plataforma-voulezvous-go-live.md  release-checklist.md  runbook.md  sprint3-runbook.md  testing-real.md
scripts/: test-cloudflare-sync.sh  vvtv-canary.sh  vvtv-phase1-go-live.sh  vvtv-phase2-go-live.sh  vvtv-phase3-go-live.sh  vvtv-promote.sh  vvtv-runbook.sh  vvtv-soak.sh
