[package]
name = "vvtv-admin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"

[lints]
workspace = true
