[package]
name = "vvtv-orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
vvtv-audit = { path = "../../crates/vvtv-audit" }
vvtv-config = { path = "../../crates/vvtv-config" }
vvtv-control-agent = { path = "../../crates/vvtv-control-agent" }
vvtv-curator = { path = "../../crates/vvtv-curator" }
vvtv-discovery = { path = "../../crates/vvtv-discovery" }
vvtv-fetcher = { path = "../../crates/vvtv-fetcher" }
vvtv-nightly = { path = "../../crates/vvtv-nightly" }
vvtv-planner = { path = "../../crates/vvtv-planner" }
vvtv-prep = { path = "../../crates/vvtv-prep" }
vvtv-queue = { path = "../../crates/vvtv-queue" }
vvtv-stream = { path = "../../crates/vvtv-stream" }
vvtv-store = { path = "../../crates/vvtv-store" }
vvtv-types = { path = "../../crates/vvtv-types" }

[lints]
workspace = true
